HTML: Fixed spelling errors CSS: Adjusted the Contact page's left panel's width to collapse on mobile better.

--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,7 @@ header .logo img {
 }
 
 .contact-left-inner-bg {
+  min-width: 320px;
   background-color: white;
   padding: 1rem;
   border-radius: 12px;
